[Qt] REGRESSION(84176): http/tests/xmlhttprequest/event-listener-gc.html fails https://bugs.webkit.org/show_bug.cgi?id=58871

Unreviewed, rolling out r84176, r84178, r84186, r84212 and r84231.
http://trac.webkit.org/changeset/84176 (original patch)
http://trac.webkit.org/changeset/84178 (original patch - part 2)
http://trac.webkit.org/changeset/84186 (build fix)
http://trac.webkit.org/changeset/84212
http://trac.webkit.org/changeset/84231 (skip failing test)

original bugs:
 - https://bugs.webkit.org/show_bug.cgi?id=58718
 - https://bugs.webkit.org/show_bug.cgi?id=58853

Source/JavaScriptCore:

* heap/MarkStack.h:
(JSC::MarkStack::deprecatedAppendValues):
(JSC::MarkStack::append):
(JSC::MarkStack::deprecatedAppend):
* runtime/JSValue.h:
* runtime/WriteBarrier.h:
(JSC::DeprecatedPtr::DeprecatedPtr):
(JSC::DeprecatedPtr::get):
(JSC::DeprecatedPtr::operator*):
(JSC::DeprecatedPtr::operator->):
(JSC::DeprecatedPtr::slot):
(JSC::DeprecatedPtr::operator UnspecifiedBoolType*):
(JSC::DeprecatedPtr::operator!):
(JSC::operator==):

Source/WebCore:

* bridge/qt/qt_class.cpp:
(JSC::Bindings::QtClass::fallbackObject):
* bridge/qt/qt_instance.cpp:
(JSC::Bindings::QtInstance::removeCachedMethod):
(JSC::Bindings::QtInstance::markAggregate):
* bridge/qt/qt_instance.h:

LayoutTests:

* platform/qt/Skipped:

git-svn-id: svn://svn.chromium.org/blink/trunk@84252 bbb929c8-8fbe-4397-9dbb-9b2b20218538