Source/WebCore/bridge/qt/qt_instance.cpp
@@ -151,7 +151,7 @@ void QtInstance::removeCachedMethod(JSObject* method)
     if (m_defaultMethod.get() == method)
         m_defaultMethod.clear();
 
-    for (QHash<QByteArray, Strong<JSObject> >::Iterator it = m_methods.begin(),
+    for (QHash<QByteArray, DeprecatedPtr<JSObject> >::Iterator it = m_methods.begin(),
         end = m_methods.end(); it != end; ++it)
         if (it.value().get() == method) {
             m_methods.erase(it);
@@ -189,6 +189,10 @@ void QtInstance::markAggregate(MarkStack& markStack)
 {
     if (m_defaultMethod)
         markStack.append(&m_defaultMethod);
+    foreach (DeprecatedPtr<JSObject> val, m_methods.values()) {
+        if (val)
+            markStack.append(&val);
+    }
 }
 
 void QtInstance::begin()
